@@ -51,7 +51,7 @@ typedef struct _midi_buf_t
 static unsigned short wildmidi_rate;
 static unsigned short wildmidi_opts;
 static const char *cfgfile[] = {
-#if defined(_WIN32) || defined(__OS2__)
+#if defined(_WIN32) || defined(__OS2__) || defined(__EMX__)
 	"C:\\TIMIDITY",
 #elif defined(__DJGPP__)
 	"C:/TIMIDITY",
