@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2013-01-27 (SVN):
+    * added OS2 platform macros for completeness sake.
+
+2013-01-27 (SVN):
     * snd_timidity.c: add "LIBS:GerontoPlayer" to cfgfile[] for MorphOS
       builds. likewise for snd_wildmidi.c.
     * updated version date stamp to 2013-01-27.
